--- a/index.html
+++ b/index.html
@@ -18,8 +18,134 @@
 		  </style>
 	</head>
 
-	<body>  
+	<body width="100%">   
 		<!-- include the main game file -->
 		<script src="js/main.js"></script>
+		<div id="mycanvas" style="width: 90%; height: 100%; float:right;"></div>
+        <div id="highscores" style="position: absolute; width: 20%; height: 100%; float:left;"><center><h2>Run Like Hell</h2><p>You are Gaben and you must run!</p><br /><i>Use mouse or keys: space (jump) and r (reset).</i></br /><br /><br /></div>
+
+		<script>
+function promptForNameAndsubmitHighscore(score) {
+    var person = prompt("Please enter your name", "Gaben");
+
+    var xmlhttp;
+    // compatible with IE7+, Firefox, Chrome, Opera, Safari
+    xmlhttp = new XMLHttpRequest();
+    xmlhttp.onreadystatechange = function(){
+        if (xmlhttp.readyState == 4 && xmlhttp.status == 200){
+            callback(xmlhttp.responseText);
+        }
+    }
+    xmlhttp.open("GET", url, true);
+    xmlhttp.send();  
+}
+</script>
+<script type="text/javascript">
+function ajaxCall(method, url, data, callback) {
+    var xmlhttp;
+
+    if (window.XMLHttpRequest) {
+        // code for IE7+, Firefox, Chrome, Opera, Safari
+        xmlhttp = new XMLHttpRequest();
+    } else {
+        // code for IE6, IE5
+        xmlhttp = new ActiveXObject("Microsoft.XMLHTTP");
+    }
+
+    xmlhttp.onreadystatechange = function() {
+        if (xmlhttp.readyState == XMLHttpRequest.DONE ) {
+            if(xmlhttp.status == 200){
+                callback(xmlhttp.responseText);
+            }
+            else if(xmlhttp.status == 400) {
+                console.log('There was an error 400')
+            }
+            else {
+                console.log('something else other than 200 was returned')
+            }
+        }
+    }
+
+    xmlhttp.open(method, url, true);
+    xmlhttp.send(data);
+}
+function promptForNameAndSubmitHighscore(score) {
+	if (score < minScore) {
+		return;
+	}
+	promptText = "You are a top runner! Please enter your name";
+	if (score > maxScore) {
+		promptText = "Congratulations! You beat the top score! Please enter your name"
+	}
+
+    person = prompt(promptText, "Gaben");
+    var xmlhttp;
+
+    if (window.XMLHttpRequest) {
+        // code for IE7+, Firefox, Chrome, Opera, Safari
+        xmlhttp = new XMLHttpRequest();
+    } else {
+        // code for IE6, IE5
+        xmlhttp = new ActiveXObject("Microsoft.XMLHTTP");
+    }
+
+    xmlhttp.onreadystatechange = function() {
+        if (xmlhttp.readyState == XMLHttpRequest.DONE ) {
+            if(xmlhttp.status == 200){
+                parseHighscores(xmlhttp.responseText);
+            }
+            else if(xmlhttp.status == 400) {
+                console.log('There was an error 400')
+            }
+            else {
+                console.log('something else other than 200 was returned')
+            }
+        }
+    }
+
+    var data = "name=" + encodeURIComponent(person) + "&score=" + score;
+    xmlhttp.open("POST", "http://myperfectgame.com/node/submitHighscore", false);
+    xmlhttp.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+    xmlhttp.send(data);
+}
+function getHighscores() {
+	ajaxCall("GET","http://myperfectgame.com/node/getHighscores", null, parseHighscores);
+}
+
+var maxScore;
+var minScore;
+
+function parseHighscores(response) {
+
+    var arr = JSON.parse(response);
+    var i;
+    var out = "<center><h2>Run Like Hell</h2><p>You are Gaben and you must run!</p><br /><i>Use mouse or keys: space (jump) and r (reset).</i></br /><br /><br /><b>Top 10 runners:</b><br /><br /><table cellpadding='5'>";
+
+    arr.highscores.sort(function (a, b) {
+    	if (a.score > b.score) {
+    		return -1; // -1; top score is #1
+    	}
+    	if (b.score > a.score) {
+    		return 1;
+    	}
+    	return 0;
+    });
+
+    for(i = 0; i < arr.highscores.length && i < 10; i++) {
+        out += "<tr><td>" + 
+        (arr.highscores[i].name == "null" ? "anonymous" : arr.highscores[i].name) +
+        "</td><td>" +
+        arr.highscores[i].score +
+        "</td></tr>";
+    }
+    out += "</table></center>";
+    document.getElementById("highscores").innerHTML = out;
+    maxScore = arr.highscores[0].score;
+    minScore = arr.highscores[i].score;
+}
+
+getHighscores();
+
+</script>
 	</body>
 </html>
