--- a/index.html
+++ b/index.html
@@ -25,9 +25,32 @@
         <div id="highscores" style="position: absolute; width: 20%; height: 100%; float:left;"><center><h2>Run Like Hell</h2><p>You are Gaben and you must run!</p><br /><i>Use mouse or keys: space (jump) and r (reset).</i></br /><br /><br /></div>
 
 		<script>
-function promptForNameAndsubmitHighscore(score) {
-    var person = prompt("Please enter your name", "Gaben");
+function setCookie(cname, cvalue, exdays) {
+    var d = new Date();
+    d.setTime(d.getTime() + (exdays*24*60*60*1000));
+    var expires = "expires="+d.toUTCString();
+    document.cookie = cname + "=" + cvalue + "; " + expires;
+}
 
+function getCookie(cname) {
+    var name = cname + "=";
+    var ca = document.cookie.split(';');
+    for(var i=0; i<ca.length; i++) {
+        var c = ca[i];
+        while (c.charAt(0)==' ') c = c.substring(1);
+        if (c.indexOf(name) == 0) return c.substring(name.length, c.length);
+    }
+    return "";
+}
+
+function promptForNameAndsubmitHighscore(score) {
+	var person = getCookie("name");
+    if (person == "") {
+        person = "Gaben";
+    } 
+
+    person = prompt("Please enter your name", person);
+	setCookie("name", person, 365);
     var xmlhttp;
     // compatible with IE7+, Firefox, Chrome, Opera, Safari
     xmlhttp = new XMLHttpRequest();
